<resources>
    <string name="app_name">Trash Tech</string>
    <string name="email_alert">email tidak valid</string>
    <string name="img_desc">default image</string>
    <string name="password_alert">password kurang dari 8 karakter</string>
    <string name="tv_nama">Nama</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="abstract_desc">Aplikasi pengelolaan limbah menggunakan teknologi pengenalan gambar dan pembelajaran mesin untuk mengklasifikasikan jenis limbah dari gambar pengguna. Aplikasi juga memberikan rekomendasi pengelolaan limbah, termasuk informasi lokasi tempat Bank Sampah terdekat. Tujuan aplikasi ini adalah meningkatkan kesadaran masyarakat tentang pengelolaan limbah yang benar dan mendukung praktik berkelanjutan.</string>
    <string name="abstract_title">Abstrak</string>
    <string name="login_txt">Masuk</string>
    <string name="hint_ed_email">Masukkan Email</string>
    <string name="hint_ed_password">Masukkan Password</string>
    <string name="hint_ed_conf_password">Konfirmasi Password</string>
    <string name="havent_account_txt">Belum punya akun?</string>
    <string name="have_account_txt">Sudah punya akun?</string>
    <string name="regist_txt">Registrasi</string>
    <string name="hint_username_txt">Nama Pengguna</string>
    <string name="maps_api_key">AIzaSyDysOTTKEx07UgIqa04yOkQ0dBxuiJwYMU</string>
    <string name="rec_0">Kertas daur ulang, Kotak penyimpanan, Bahan pembungkus, Pembatas atau pelindung dalam kotak pengiriman, lukisan, patung, mainan dan Hiasan dinding atau dekorasi rumah.</string>
    <string name="rec_1">Botol, Wadah kaca daur ulang, Vas bunga, Lampu hias, Patung kaca, Paving block, Mozaik dan Lukisan kaca.</string>
    <string name="rec_2">Memo, Kertas catatan, Kertas daur ulang, Kotak kardus, Kemasan kertas, Buku catatan, Kertas origami dan Karton.</string>
    <string name="rec_3">Serat tekstil, Wadah penyimpanan, Panel dinding, Kursi, Meja, Mainan anak-anak, Hiasan dinding dan Patung.</string>
    <string name="rec_4">Vas bunga, Toples, Patung kaca, Mangkuk, Gelas, Botol kaca daur ulang, Piring dan Cincin.</string>
    <string name="rec_other">Tidak ada rekomendasi untuk jenis sampah ini.</string>
    <string name="image_prediction">image prediction</string>
    <string name="delete_txt">Delete</string>
    <string name="main_title">Siap menyelesaikan sampah anda?</string>
    <string name="identification_text">Identifikasi</string>
    <string name="saving_text">Tersimpan</string>
    <string name="save_text">Simpan</string>
    <string name="history_text">Riwayat</string>
    <string name="news_title_text">Berita Untuk Anda</string>
    <string name="identification_title">Mulai ambil gambar</string>
    <string name="identification_desc">Kami akan membantu anda mengidentifikasi jenis sampah yang anda miliki</string>
    <string name="camer_text">Kamera</string>
    <string name="galery_text">Galeri</string>
    <string name="lets_identification_text">Ayo Identifikasi</string>
    <string name="opps_text">Opps</string>
    <string name="empty_news_text">kamu belum menyimpan berita apapun</string>
    <string name="empty_history_text">Ayo scan sampahmu dahulu</string>
    <string name="md_text">MD</string>
    <string name="hilmi_syamsudin">Hilmi Syamsudin</string>
    <string name="universitas_negeri_semarang">Universitas Negeri Semarang</string>
    <string name="muhamad_fazril_maulana">Muhamad Fazril Maulana</string>
    <string name="polteknik_negeri_jakarta">Polteknik Negeri Jakarta</string>
    <string name="cc_text">CC</string>
    <string name="fakhir_mustafa_afdal">Fakhir Mustafa Afdal</string>
    <string name="institut_teknologi_telkom_purwokerto">Institut Teknologi Telkom Purwokerto</string>
    <string name="nathanael_andra_wijaya">Nathanael Andra Wijaya</string>
    <string name="ml_text">ML</string>
    <string name="chaesa_adella_rahma">Chaesa Adella Rahma</string>
    <string name="nabila_salvaningtyas">Nabila Salvaningtyas</string>
    <string name="universitas_airlangga">Universitas Airlangga</string>
    <string name="full_news">berita lengkap : %1$s</string>
    <string name="save_news">Berita disimpan</string>
    <string name="delete_text">Hapus</string>
    <string name="alert_title_delete">Hapus Riwayat</string>
    <string name="alert_desc_delete">Yakin ingin menghapus semua riwayat identifikasi?</string>
    <string name="yes_text">Yaa</string>
    <string name="delete_success">Berhasil menghapus</string>
    <string name="no_text">Tidak</string>
    <string name="alert_image_selected">Pilih Gambar Dulu Ya!</string>
    <string name="predict_label_resource">Yey hasilnya %1$s</string>
    <string name="text_trash_map">Atau cari bank sampah terdekat,</string>
    <string name="here_text">" Disini"</string>
</resources>