<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.AboutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_abstract_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/abstract_title"
            android:textColor="@color/dark"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_abstract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:layout_marginTop="18dp"
            android:lineSpacingExtra="6dp"
            android:justificationMode="inter_word"
            android:text="@string/abstract_desc"
            android:textColor="@color/dark"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_abstract_title" />


        <LinearLayout
            android:id="@+id/profile1"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/profile2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_abstract">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:civ_border_color="@color/primary"
                app:civ_border_width="3dp" />

            <TextView
                android:id="@+id/role1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark"
                android:layout_gravity="center"
                android:text="@string/md_text"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark"
                android:layout_gravity="center"
                android:text="@string/hilmi_syamsudin" />

            <TextView
                android:id="@+id/univ1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark"
                android:layout_gravity="center"
                android:text="@string/universitas_negeri_semarang"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile2"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profile1"
            app:layout_constraintTop_toBottomOf="@id/tv_abstract">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:civ_border_color="@color/primary"
                app:civ_border_width="3dp" />

            <TextView
                android:id="@+id/role2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark"
                android:layout_gravity="center"
                android:text="@string/md_text"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark"
                android:layout_gravity="center"
                android:text="@string/muhamad_fazril_maulana" />

            <TextView
                android:id="@+id/univ2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark"
                android:layout_gravity="center"
                android:text="@string/polteknik_negeri_jakarta"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile3"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/profile2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile1">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:civ_border_color="@color/primary"
                app:civ_border_width="3dp" />

            <TextView
                android:id="@+id/role3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark"
                android:layout_gravity="center"
                android:text="@string/cc_text"

                android:textStyle="italic" />

            <TextView
                android:id="@+id/name3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark"
                android:layout_gravity="center"
                android:text="@string/fakhir_mustafa_afdal" />

            <TextView
                android:id="@+id/univ3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/institut_teknologi_telkom_purwokerto"
                android:textAlignment="center"
                android:textColor="@color/dark"
                android:layout_gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile4"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profile1"
            app:layout_constraintTop_toBottomOf="@id/profile2">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:civ_border_color="@color/primary"
                app:civ_border_width="3dp" />

            <TextView
                android:id="@+id/role4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark"
                android:layout_gravity="center"
                android:text="@string/cc_text"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/name4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark"
                android:layout_gravity="center"
                android:text="@string/nathanael_andra_wijaya" />

            <TextView
                android:id="@+id/univ4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/institut_teknologi_telkom_purwokerto"
                android:textAlignment="center"
                android:textColor="@color/dark"
                android:layout_gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile5"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/profile2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile3">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:civ_border_color="@color/primary"
                app:civ_border_width="3dp" />

            <TextView
                android:id="@+id/role5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark"
                android:layout_gravity="center"
                android:text="@string/ml_text"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/name5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark"
                android:layout_gravity="center"
                android:text="@string/chaesa_adella_rahma" />

            <TextView
                android:id="@+id/univ5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark"
                android:layout_gravity="center"
                android:text="@string/polteknik_negeri_jakarta"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile6"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profile1"
            app:layout_constraintTop_toBottomOf="@id/profile3">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:civ_border_color="@color/primary"
                app:civ_border_width="3dp" />

            <TextView
                android:id="@+id/role6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark"
                android:layout_gravity="center"
                android:text="@string/ml_text"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/name6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark"
                android:layout_gravity="center"
                android:text="@string/nabila_salvaningtyas" />

            <TextView
                android:id="@+id/univ6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/universitas_airlangga"
                android:textAlignment="center"
                android:textColor="@color/dark"
                android:layout_gravity="center" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>