<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.IdentificationActivity">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/identification_title"
        android:textColor="@color/dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/identification_desc"
        android:textColor="@color/dark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <ImageView
        android:id="@+id/img_prev"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:src="@drawable/holder"
        android:contentDescription="@string/img_desc"
        app:layout_constraintBottom_toBottomOf="@+id/imageFrame"
        app:layout_constraintEnd_toEndOf="@+id/imageFrame"
        app:layout_constraintStart_toStartOf="@+id/imageFrame"
        app:layout_constraintTop_toTopOf="@+id/imageFrame" />

    <ImageView
        android:id="@+id/imageFrame"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/holder_frame"
        android:contentDescription="@string/img_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_content" />


    <TextView
        android:id="@+id/tv_result"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:foregroundGravity="top"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:justificationMode="inter_word"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageFrame"
        tools:text="Gelas" />

    <TextView
        android:id="@+id/tv_recommendation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="top"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="10dp"
        android:gravity="center_horizontal"
        android:justificationMode="inter_word"
        android:textColor="@color/dark"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result"
        tools:text="@string/rec_0"/>

    <LinearLayout
        android:layout_width="324dp"
        android:layout_marginTop="17dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_result"
        app:layout_constraintStart_toStartOf="@+id/tv_result"
        app:layout_constraintTop_toBottomOf="@+id/tv_recommendation"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_bank_sampah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Atau cari bank sampah terdekat," />

        <TextView
            android:id="@+id/tv_disini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text=" Disini" />


    </LinearLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_kamera"
        android:layout_width="124dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/primary"
        android:text="@string/camer_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/btn_klasifikasi"
        app:layout_constraintTop_toTopOf="@+id/btn_galeri" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_galeri"
        android:layout_width="124dp"
        android:layout_height="56dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/primary"
        android:text="@string/galery_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_klasifikasi"
        app:layout_constraintEnd_toEndOf="@+id/btn_klasifikasi" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_klasifikasi"
        android:layout_width="324dp"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/primary"
        android:text="@string/lets_identification_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>